@@ -51,6 +51,7 @@ void addExternalDevices();
 #cmakedefine ENABLE_XSensMTx
 #cmakedefine ENABLE_portaudio
 #cmakedefine ENABLE_opencv_grabber
+#cmakedefine ENABLE_firewirecamera
 #cmakedefine ENABLE_ffmpeg
 #cmakedefine ENABLE_jrkerr
 #cmakedefine ENABLE_dimax_u2c
@@ -105,6 +106,10 @@ extern "C" void add_yarpmod_devices();
 
 #ifdef ENABLE_opencv_grabber
 #include <yarp/OpenCVGrabber.h>
+#endif
+
+#ifdef ENABLE_firewirecamera
+#include <yarp/FirewireCamera.h>
 #endif
 
 #ifdef ENABLE_ffmpeg
@@ -228,6 +233,12 @@ void Drivers::init() {
     add(new DriverCreatorOf<OpenCVGrabber>("opencv_grabber", 
                                            "grabber",
                                            "OpenCVGrabber"));
+#endif
+
+#ifdef ENABLE_firewirecamera
+    add(new DriverCreatorOf<FirewireCamera>("firewirecamera",
+                                            "grabber",
+                                            "FirewireCamera"));
 #endif
 
 #ifdef ENABLE_ffmpeg
