@@ -1,3 +1,12 @@
+2008-01-31  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_dev/src/firewirecamera/CMakeLists.txt: add new
+	method for supporting firewirecamera.
+
+	* src/libYARP_dev/src/PopulateDrivers.cpp.in: added the
+	firewirecamera device (missing, thanks Stefan Freyr Stefansson
+	for pointing this out).
+
 2008-01-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* conf/YarpModuleHooks.cmake: fix problem with circular
